--- a/menu.css
+++ b/menu.css
@@ -13,6 +13,7 @@
         grid-column-gap: 5%;
     }
 
+    /* Make body div only affect the menu.html */
     body {
         background-image: url("https://source.unsplash.com/xg8z_KhSorQ");
         width: 100%;
@@ -67,10 +68,30 @@
         background-color: #777777;
     }
 
+    #background-tables{
+        width: 100%;
+        height: 100%;
+        background-color: rgba(255, 255, 255, 0.8);
+    }
 
+    #container {    
+        /* Make background color of container be a gradient from blue to white */
+        background-color: rgb(203, 247, 255);
+        /* Make the container a flex container */
+        display: flex;
+        /* Make the container a flex container */
+        flex-direction: column;
+        /* Center the content of the container */
+        align-items: center;
+        /* Center the content of the container */
+        justify-content: center;
+        /* Set the height of the container to 100% of the viewport */
+        height: 100vh;
+        /* Set the width of the container to 100% of the viewport */
+        width: 100vw;
 
-    #container {
-        background-color: #aaaaaa;
+        width: 100%;
+        height: 100%;
     }
 
     /* Make textDiv Appear in Front of Image */
